--- a/src/SmartRoadSense.Redux/SmartRoadSense.Redux.csproj
+++ b/src/SmartRoadSense.Redux/SmartRoadSense.Redux.csproj
@@ -35,4 +35,15 @@
       <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\SensingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
