--- a/src/SmartRoadSense.Redux.Android/SmartRoadSense.Redux.Android.csproj
+++ b/src/SmartRoadSense.Redux.Android/SmartRoadSense.Redux.Android.csproj
@@ -100,14 +100,21 @@
   <ItemGroup>
     <Folder Include="Resources\drawable-hdpi\" />
     <Folder Include="Resources\drawable-xhdpi\" />
-    <Folder Include="Resources\drawable-xxhdpi\" />
-    <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmartRoadSense.Redux\SmartRoadSense.Redux.csproj">
       <Project>{fe33294c-c0d1-4cd8-bc8f-993da5ff049c}</Project>
       <Name>SmartRoadSense.Redux</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxxhdpi\launcher_redux.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\launcher_redux.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-mdpi\launcher_redux.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
