--- a/src/SmartRoadSense.Redux.Android/Properties/AndroidManifest.xml
+++ b/src/SmartRoadSense.Redux.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="it.smartroadsense.redux" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.1" package="it.smartroadsense.redux" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="25" />
-	<application android:label="SmartRoadSense Redux" android:icon="@drawable/xamarin_logo"></application>
+	<application android:label="SmartRoadSense Redux" android:icon="@drawable/launcher_redux"></application>
 </manifest>
