--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -17,7 +17,7 @@ tab_size = 4
 end_of_line = crlf
 
 [*.cs]
-end_of_line = lf
+end_of_line = crlf
 indent_style = space
 indent_size = tab
 tab_size = 4
