--- a/src/SmartRoadSense.Redux.iOS/SmartRoadSense.Redux.iOS.csproj
+++ b/src/SmartRoadSense.Redux.iOS/SmartRoadSense.Redux.iOS.csproj
@@ -133,8 +133,11 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
+    <PackageReference Include="Plugin.AudioRecorder">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmartRoadSense.Redux\SmartRoadSense.Redux.csproj">
